tests/baselines/reference/typeFromPropertyAssignment22.errors.txt
npm-install.js(4,49): error TS7006: Parameter 'next' implicitly has an 'any' type.
npm-install.js(6,6): error TS7006: Parameter 'args' implicitly has an 'any' type.
npm-install.js(7,9): error TS2322: Type 'string' is not assignable to type 'number'.


==== npm-install.js (3 errors) ====
    function Installer () {
        this.args = 0
    }
    Installer.prototype.loadArgMetadata = function (next) {
                                                    ~~~~
!!! error TS7006: Parameter 'next' implicitly has an 'any' type.
        // ArrowFunction isn't treated as a this-container
        (args) => {
         ~~~~
!!! error TS7006: Parameter 'args' implicitly has an 'any' type.
            this.args = 'hi'
            ~~~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
            this.newProperty = 1
        }
    }
    var i = new Installer()
    i.newProperty = i.args // ok, number ==> number | undefined
    